added aaron2u2 test presets

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 							<option value="15">NPC Shuffle - Standard</option>
 							<option value="10">Daily Challenge</option>
 							<option value="11">Random Challenge</option>
+							<option value="22">The aaron2u2 Special</option>
 						</select>
 					</div>
 				</div>
