--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 					<div class="input-group" id="flag-string-container">
 						<input type="text" class="form-control mono"
 							   placeholder="(Optional) Custom Flag String" id="custom-flags">
-						<span class="input-group-btn" id="gen-btn-container">
-							<button id="update-selected-flags" class="btn btn-default btn-full-width" type="button" disabled>
+						<span class="input-group-btn" id="flag-btn-container">
+							<button id="update-selected-flags" class="btn btn-default btn-full-width" type="button" enabled>
 								<span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
 								Update Selected Flags
 							</button>
