Undoing some dumb stuff

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 							<option value="15">NPC Shuffle - Standard</option>
 							<option value="10">Daily Challenge</option>
 							<option value="11">Random Challenge</option>
-							<option value="16">The aaron2u2 Special</option>
+							<option value="16">Standard Racing Flags</option>
 						</select>
 					</div>
 				</div>
@@ -114,9 +114,9 @@
 				<div class="col-md-6">
 					<div class="input-group top-spaced" id="flag-string-container">
 						<input type="text" class="form-control mono"
-							   placeholder="(Optional) Custom Flag String" id="custom-flags" readonly>
+							   placeholder="(Optional) Custom Flag String" id="custom-flags"><!--readonly-->
 						<span class="input-group-btn" id="flag-btn-container">
-							<button id="update-selected-flags" class="btn btn-default btn-full-width" type="button" disabled>
+							<button id="update-selected-flags" class="btn btn-default btn-full-width" type="button"><!--disabled-->
 								<span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
 								Update Selected Flags
 							</button>
